--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             <div>
             <button class="btn btn-warning" id="STARTbtn" onclick="StartClassification()">START</button>
         </div>
-            <img
-            m >
+            <img  id="default-img" src="listen-icon-png-23.jpg" >
     </center>
     </body>
 </html>
